<resources>
    <string name="app_name">MyUtil</string>

    <string name="tab_home">Home</string>
    <string name="tab_community">Community</string>
    <string name="tab_club">Club</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_minute">Minute</string>

    <string name="a_woman">"여자"</string>

    <string name="c_cancel">"취소"</string>

    <string name="en_for_you" translatable="false">"For You"</string>
    <string name="en_popular">"Popular"</string>
    <string name="en_newest">"Newest"</string>

    <string name="five_hundred_fanit">"500 FANiT"</string>
    <string name="f_fansing">"FANSING"</string>

    <string name="g_denial">"거부"</string>

    <string name="h_confirm">"확인"</string>
    <string name="h_hanryutimes">"HANRYUTIMES"</string>

    <string name="n_man">"남자"</string>

    <string name="r_need_login">"로그인 필요"</string>

    <string name="s_select">"선택"</string>

    <string name="p_fantoo_tv">"FANTOO TV"</string>
    <string name="p_playlist">PLAYLIST</string>

    <string name="t_withdraw_member">"탈퇴한 회원"</string>

    <string name="s_lang_nothing_title_simple">"선택 없음"</string>


    <string name="JustNow">"방금"</string>
    <string name="MinuteAgo">"1분"</string>
    <string name="MinutesAgo">"%1$d분"</string>
    <string name="HourAgo">"1시간"</string>
    <string name="HoursAgo">"%1$d시간"</string>
    <string name="DayAgo">"1일"</string>
    <string name="DaysAgo">"%1$d일"</string>

    <string name="se_r_need_login">"로그인이 필요합니다.\n로그인 후 더 편리하게 이용하세요!"</string>
</resources>